namespace Commands.CodeBaseSearch.Model
{
    public enum SubjectTypeEnum
    {
        Unknown = 0,
        Solution,
        Project,
        File,
        Type,
        Member
    }
}
